# SwiftyNorg

./: .gitattributes  CHANGELOG.md  Cargo.toml  Package.swift  note  rust-toolchain.toml
.github/workflows/: ci.yml
RustXcframework.xcframework/: Info.plist
RustXcframework.xcframework/ios-arm64-simulator/Headers/: norg-lib.h
Sources/SwiftyNorg/: norg-lib.swift
SwiftyNorg/RustXcframework.xcframework/: Info.plist
SwiftyNorg/RustXcframework.xcframework/ios-arm64-simulator/Headers/: module.modulemap
SwiftyNorg/RustXcframework.xcframework/ios-arm64/Headers/: norg-lib.h
SwiftyNorg/Sources/SwiftyNorg/: norg-lib.swift
scripts/: build.sh
src/: lib.rs
